--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -39,7 +39,7 @@ input,
 select,
 textarea,
 button {
-  font: 400 1rem "Roboto", sans-serif;
+  font: 400 1rem 'Roboto', sans-serif;
 }
 
 button {
